--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react": "^9.3.2",
+    "axios": "^0.19.0",
     "install": "^0.13.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
